[package]
name = "netcrab"
version = "0.1.0"
edition = "2021"
licence = "MIT"
authors = [ "FallAngel" ]


[[bin]]
name = "nc"
path = "src/main.rs"

[profile.release]
opt-level = 2
strip = true
lto = "fat"
codegen-units = 1
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
